root/static/less/release.less
.content {
    .release-documentation,
    .release-modules,
    .release-provides {
        display: table;
        div.release-row:nth-of-type(even) {
            background-color: #f5f5f5;
        }
        div.release-row {
            display: table-row;
            div.left, div.right {
                display: table-cell;
            }
            div.left {
                font-weight: bold;
                padding-right: 1em;
            }
        }
        .unauthorized {
            color: #f00;
            font-weight: bold;
            padding-left: 10px;
            text-align: right;
        }
    }
    .file-group {
        h2 {
            display: inline;
            font-weight: bold;
            font-size: 100%;
            margin: 0;
            line-height: inherit;
        }
        ul {
            padding-left: 0;
        }
        a {
            font-weight: bold;
        }
        margin-bottom: 10px;
    }
}

/* Changes in release page
 * See /release/CPAN-Changes for example
 */
#last-changes {
    h2:extend(.content .file-group h2) {}

    ul {
        padding-left: 20px;
        margin-bottom: 0px;
    }

    .group-header {
        margin-bottom: 1em;
        &:last-child {
            margin-bottom: 0em;
        }
    }

    ul, ul ul ul {
        list-style: disc;
    }
    ul ul, ul ul ul ul {
        list-style: circle;
    }

    .show-more { display: none }
    .hide-more { display: inline }
    &.collapsed {
        .show-more { display: inline }
        .hide-more { display: none }
        #last-changes-container {
            overflow: hidden;
            max-height: 20em;
        }
    }

    #last-changes-toggle {
        display: none;
    }

    #last-changes-container {
        margin-bottom: 0.5em;
    }
    padding-bottom: 0.5em;
    overflow: auto;
}

